apps/eventing/sequencing/config/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knative-producer
  namespace: knative-samples
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      app: knative-producer
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: knative-producer
          image: docker.io/manny87/knative-consumer-producer:19.11.09.15.29.54
          command: ["/app/app"]
          # args: ["--mode=producer","--source=manny.test.source","-type=manny.sample.event","-url=http://imc-dispatcher.knative-eventing.svc.cluster.local"]
          args: ["--mode=producer","--source=manny.test.source","-type=manny.sample.evapplent","-url=http://sequence-kn-sequence-0-kn-channel.knative-samples.svc.cluster.local"]
