apps/eventing/sequencing/config/services.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: step-1
  namespace: knative-samples
  labels:
    serving.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - image: manny87/knative-transformer:19.11.10.00.11.52
          command: ["/app/app"]
          args: ["-step=1","-port=8080"]
          ports:
            - containerPort: 8080
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: step-2
  namespace: knative-samples
  labels:
    serving.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - image: manny87/knative-transformer:19.11.10.00.11.52
          command: ["/app/app"]
          args: ["-step=2","-port=8080"]
          ports:
            - containerPort: 8080
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: step-3
  namespace: knative-samples
  labels:
    serving.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - image: manny87/knative-transformer:19.11.10.00.11.52
          command: ["/app/app"]
          args: ["-step=3","-port=8080"]
          ports:
            - name: http1
              containerPort: 8080
              protocol: TCP
