apps/eventing/sequencing/config/egress.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: knative-samples
spec:
  hosts:
    - sequence-kn-sequence-0-kn-channel
  http:
  - route:
      - destination:
          host: imc-dispatcher.knative-eventing.knative-samples.svc.cluster.local
