apps/eventing/sequencing/config/other_ns.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: knative-serving
spec:
  host: "*.knative-serving.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: knative-eventing
spec:
  host: "*.knative-eventing.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
